--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,6 +2,7 @@ use_frameworks!
 
 target 'ASNetworking_Example' do
   pod 'ASNetworking', :path => '../'
+  pod 'PromiseKit'
 
   target 'ASNetworking_Tests' do
     inherit! :search_paths
